[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://sounds/double barrel/sbarrel1.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/EndPoint.gd" type="Script" id=3]
[ext_resource path="res://sounds/dryfire1.wav" type="AudioStream" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://sounds/spray.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/double barrel/scock1.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/double barrel/dbarrel1.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/items/tick.wav" type="AudioStream" id=19]

[sub_resource type="CylinderShape" id=1]
height = 0.01

[node name="Weapon" type="Spatial"]
script = ExtResource( 1 )

[node name="UseCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -4 )

[node name="EndPoint" type="Spatial" parent="UseCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2048 )

[node name="DoubleBarrelFire" type="AudioStreamPlayer" parent="RayCast"]
stream = ExtResource( 2 )

[node name="DoubleBarrelReload" type="AudioStreamPlayer" parent="RayCast"]
stream = ExtResource( 10 )

[node name="DoubleBarrelFireBoth" type="AudioStreamPlayer" parent="RayCast"]
stream = ExtResource( 11 )

[node name="ThrowGrenade" type="AudioStreamPlayer" parent="RayCast"]

[node name="Empty" type="AudioStreamPlayer" parent="RayCast"]
stream = ExtResource( 4 )

[node name="Area" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, -0.5 )
shape = SubResource( 1 )

[node name="weaponswap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="TransformHelper" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="Hitscan" type="Spatial" parent="ViewportContainer/Viewport/TransformHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, -1.25 )

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport/TransformHelper"]
cull_mask = 6
environment = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 3.0
playback/speed = 3.0

[node name="spray" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )

[node name="SprayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
